--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <script>
     var pos = 0;
 const pacArray = [
-  ['./PacMan1.png',],
+  ['./PacMan1.png', './PacMan2.png', './PacMan3.png', './PacMan4.png'],
 ];
 var direction = 0;
 const pacMen = [];
@@ -22,7 +22,7 @@ function makePac() {
   let game = document.getElementById('game');
   let newimg = document.createElement('img');
   newimg.style.position = 'absolute';
-  newimg.src = './PacMan1.png';
+  newimg.src = './PacMan3.png';
   newimg.width = 100;
   newimg.style.left = position.x;
   newimg.style.top = position.y;
